--- a/Raul/templates/Raul/index.html
+++ b/Raul/templates/Raul/index.html
@@ -87,7 +87,7 @@
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
                         <div class="dropdown-menu">
-                            <a href="{% url 'Raul-About' %}" class="dropdown-item">Second Homepage</a>
+                            <a href="{% url 'Raul-SecondHome' %}" class="dropdown-item">Second Homepage</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
