--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -20,9 +20,8 @@
             transform: scale(1.1);
         }
 
-        .container_Hover {
-            position: relative;
-            width: 50%;
+        .container1 {
+           padding-top: 100px;
         }
 
         .image_Hover {
@@ -71,7 +70,6 @@
 <body>
 
 <!-- Header Nav Bar-->
-<header class="header-area overlay">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">R A Ù L</a>
@@ -87,7 +85,7 @@
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
                         <div class="dropdown-menu">
-                            <a href="{% url 'Raul-About' %}" class="dropdown-item">Second Homepage</a>
+                            <a href="{% url 'Raul-SecondHome' %}" class="dropdown-item">Second Homepage</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
@@ -106,10 +104,12 @@
             </div>
         </div>
     </nav>
-</header>
 
-<div class="col-md-8">
-    {% block content %}{% endblock %}
+
+<div class = container1>
+    <div class = container>
+        {% block content %}{% endblock %}
+    </div>
 </div>
 
 
