--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type = "text/css" href="{% static 'Raul/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'Raul/main.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,9 +19,10 @@
     <figure>
         <p> R A Ù L </p>
         <p> Home </p>
-        <p> Store  </p>
-        <p > Contact </p>
+        <p> Store </p>
+        <p> Contact </p>
         <p onclick="openLogin()" draggable="false" id ="loginText"> Login </p>
+
         <div class ="loginSlide" id="login">
             <div class="loginText">
                 <p>L O G I N</p>
@@ -34,7 +35,7 @@
                 <a>Forgot Password?</a>
             </div>
             <div class ="arrow">
-                <img src= "{% static 'Raul/Images/arrowDown.png' %}" onclick="closeLogin()" draggable="false" id="arrow">
+                <img src="arrowDown.png" onclick="closeLogin()" draggable="false" id="arrow">
             </div>
             <div class="signUp">
                 <p> S I G N - U P </p>
@@ -47,26 +48,27 @@
                 <a>Forgot Password?</a>
             </div>
         </div>
+
         <p> Cart </p>
     </figure>
 
     <figcaption> R A Ù L </figcaption>
 
     <nav>
-        <img src="{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false">
+        <img src= "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false">
         <ul id="contentHam">
 
             <li class="exitButton">
                 <img src="{% static 'Raul/exit.svg' %}" id="exitButton" onclick="closeNav()" draggable="false">
             </li>
             <li>
-                <a  href="{% url 'Raul-Home'%}">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
-                <a href="{% url 'Raul-About'%}">Store</a>
+                <a href="#">Store</a>
             </li>
             <li>
-                <a href= {% url 'Raul-About'%}>Contact</a>
+                <a href="#">Contact</a>
             </li>
             <li>
                 <a href="#">Login</a>
@@ -77,8 +79,8 @@
 
         </ul>
     </nav>
-</header>
 
+</header>
 <div class ="bannerHead" id = "mainBanner">
     <div class = "bannerHeading">
         <figcaption> R A Ù L </figcaption>
@@ -89,19 +91,19 @@
         <figcaption>SH OP</figcaption>
     </div>
     <div class="organizer">
-        <img draggable="false" alt="Organizer Photo" src="{% static 'Raul/Images/2.jpg' %}" width="100%" class="staticImage">
+        <img draggable="false" alt="Organizer Photo" src="{% static 'Raul/Images/lighting_-_5_x_7_400x.jpg' %}" width="100%" class="staticImage">
         <div class = "textMiddle">
             <div class ="textInfo">Lighting</div>
         </div>
     </div>
     <div class="organizer">
-        <img alt="Organizer Photo" src="{% static 'Raul/Images/3.jpg' %}" width="100%" class="staticImage">
+        <img alt="Organizer Photo" src="{% static 'Raul/Images/2.jpg' %}" width= "100%" class="staticImage">
         <div class = "textMiddle">
             <div class ="textInfo">Wall Art</div>
         </div>
     </div>
     <div class="organizer">
-        <img alt="Organizer Photo" src="{% static 'Raul/Images/4.jpg' %}" width="100%" class="staticImage">
+        <img alt="Organizer Photo" src="{% static 'Raul/Images/3.jpg' %}" width="100%" class="staticImage">
         <div class = "textMiddle">
             <div class ="textInfo">Plates</div>
         </div>
@@ -113,13 +115,13 @@
         </div>
     </div>
     <div class="organizer">
-        <img alt="Organizer Photo" src="{% static 'Raul/Images/1.jpg' %}" width="100%" class="staticImage">
+        <img alt="Organizer Photo" src="{% static 'Raul/Images/5.jpg' %}" width="100%" class="staticImage">
         <div class = "textMiddle">
             <div class ="textInfo">Furniture</div>
         </div>
     </div>
     <div class="organizer">
-        <img alt="Organizer Photo" src="{% static 'Raul/Images/5.jpg' %}" width="100%" class="staticImage">
+        <img alt="Organizer Photo" src="{% static 'Raul/Images/1.jpg' %}" width="100%" class="staticImage">
         <div class = "textMiddle">
             <div class ="textInfo">Damn Son</div>
         </div>
@@ -146,6 +148,5 @@
     }
 
 </script>
-
 </body>
 </html>
