--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -72,7 +72,7 @@
 <!-- Header Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">R A Ù L</a>
+            <a href="{% url 'Raul-Home' %}" class="navbar-brand">R A Ù L</a>
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                 <span class="menu-icon-bar"></span>
                 <span class="menu-icon-bar"></span>
