--- a/Raul/templates/Raul/index.html
+++ b/Raul/templates/Raul/index.html
@@ -74,7 +74,7 @@
 <header class="header-area overlay">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">R A Ù L</a>
+            <a href="{% url 'Raul-Home' %}" class="navbar-brand">R A Ù L</a>
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                 <span class="menu-icon-bar"></span>
                 <span class="menu-icon-bar"></span>
