--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -20,9 +20,8 @@
             transform: scale(1.1);
         }
 
-        .container_Hover {
-            position: relative;
-            width: 50%;
+        .container1 {
+            padding-top: 100px;
         }
 
         .image_Hover {
@@ -71,7 +70,6 @@
 <body>
 
 <!-- Header Nav Bar-->
-<header class="header-area overlay">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">R A Ù L</a>
@@ -106,10 +104,11 @@
             </div>
         </div>
     </nav>
-</header>
 
-<div class="col-md-8">
+<div class="container">
+<div class = "container1">
     {% block content %}{% endblock %}
+</div>
 </div>
 
 
