Change in Landing Page

--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -15,12 +15,22 @@
 
 </head>
 <body>
-    <video src="{% static 'Raul/Images/cafe.mp4' %}" autoplay loop playsinline muted></video>
-    <header class="titleCafe">
-        <h1>
-            Cafe
-            <span>Flor</span>
-        </h1>
-    </header>
+    <div class="landingIcons">
+        <div class ="cafeBanner">
+            <div class="cafeHeading">
+                C A F E
+            </div>
+        </div>
+        <div class="raulBanner">
+            <div class="raulHeading">
+                R A U L
+            </div>
+        </div>
+        <div class="thirdBanner">
+            <div class="thirdHeading">
+                T H I R D
+            </div>
+        </div>
+    </div>
 </body>
 </html>
