--- a/Raul/static/Raul/landingCSS.css
+++ b/Raul/static/Raul/landingCSS.css
@@ -10,11 +10,70 @@ a{
     text-decoration: none;
 }
 
-video{
-    object-fit: cover;
-    width: 100vw;
-    height: 100vw;
-    position: fixed;
-    top:0;
-    left:0;
+ /* video{
+            object-fit: cover;
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            top:0;
+            left:0;
+            z-index: -1;
+            filter:blur(5px);
+        }*/
+
+.landingIcons{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:20%;            
+}
+
+.cafeBanner{
+    background-color: indianred;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    width: 80%;
+    transition: 0.5s ease-in-out;
+}
+
+.cafeHeading{
+    color:white;
+    font-size: 5em;
+    text-align: center;
+    padding:30px;
+    transition: 0.5s ease-in-out;
+}
+
+.raulBanner{
+    background-color: indianred;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    width: 80%;
+    transition: 0.5s ease-in-out;
+}
+
+.raulHeading{
+    color:white;
+    font-size: 5em;
+    text-align: center;
+    padding:30px;
+}
+
+.thirdBanner{
+    background-color: indianred;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    width: 80%;
+    transition: 0.5s ease-in-out;
+}
+
+.thirdHeading{
+    color:white;
+    font-size: 5em;
+    text-align: center;
+    padding:30px;
 }
