--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -582,8 +582,16 @@ nav ul li a:hover{
         height: 4em;
     }
 
+    figure a{
+        margin-right: 2em;
+    }
     figure p{
-        margin: 20px;
+        margin-right:20px;
+    }
+
+    figure img{
+        margin-top:0.5em;
+        width:7%;
     }
 
     .bannerHead{
