--- a/Raul/templates/Raul/index.html
+++ b/Raul/templates/Raul/index.html
@@ -83,7 +83,7 @@
 
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li><a href="#" class="nav-item nav-link active">Home</a></li>
+                    <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link active">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
                         <div class="dropdown-menu">
