Changes in the Header

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -52,7 +52,7 @@
         <a href ="#"><p> Cart </p></a>
     </figure>
 
-    <figcaption> R A Ù L </figcaption>
+    <figcaption><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%"></figcaption>
 
     <nav>
         <img src= "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false">
