--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -397,12 +397,12 @@ nav ul li a:hover{
         margin-top: 30%;
     }
 
-    header figcaption{
-        font-size: 1em;
+    header figcaption img{
         margin-left: 2em;
-        margin-top: 5%;
+        margin-top:0.2em;
+        width:15%;
     }
-
+    
     nav ul li a{
         text-align: left;
         font-size: 1.5em;
@@ -460,10 +460,10 @@ nav ul li a:hover{
         margin-top: 15%;
     }
 
-    header figcaption{
-        font-size: 1.5em;
+    header figcaption img{
         margin-left: 2em;
-        margin-top: 1.5%;
+        margin-top:0.2em;
+        width:7%;
     }
 
     nav ul li a{
@@ -519,10 +519,10 @@ nav ul li a:hover{
         margin-top: 15%;
     }
 
-    header figcaption{
-        font-size: 1.5em;
+    header figcaption img{
         margin-left: 2em;
-        margin-top: 1.5%;
+        margin-bottom:0.5em;
+        width:7%;
     }
 
     nav ul li a{
