--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -72,7 +72,7 @@
 <!-- Header Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-            <a href="{% url 'Raul-Home' %}" class="navbar-brand">R A Ù L</a>
+            <a href="{% url 'Raul-Home' %}" class="navbar-brand"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="8%"></a>
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
                 <span class="menu-icon-bar"></span>
                 <span class="menu-icon-bar"></span>
@@ -81,7 +81,9 @@
 
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link active">Home</a></li>
+                    <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link">Home</a></li>
+                    <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link">Home2</a></li>
+                    <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link">Home3</a></li>
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
                         <div class="dropdown-menu">
