--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -15,22 +15,23 @@
 
 </head>
 <body>
-    <div class="landingIcons">
-        <div class ="cafeBanner">
-            <div class="cafeHeading">
-                C A F E
-            </div>
+    <a href="#">
+        <div class="container">
+            <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
+            <video src="{% static 'Raul/Images/flor.mp4' %}" autoplay muted loop></video>
         </div>
-        <div class="raulBanner">
-            <div class="raulHeading">
-                R A U L
-            </div>
+    </a>
+    <a href="#">
+        <div class="container">
+            <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
+            <video src="{% static 'Raul/Images/raul.mp4' %}" autoplay muted loop></video>
         </div>
-        <div class="thirdBanner">
-            <div class="thirdHeading">
-                T H I R D
-            </div>
+    </a>
+    <a href="#">
+        <div class="container">
+            <p id="third">F O <br>   U   R</p>
+            <video src="{% static 'Raul/Images/third.mp4' %}" autoplay muted loop></video>
         </div>
-    </div>
+    </a>
 </body>
 </html>
