--- a/Raul/templates/Raul/index.html
+++ b/Raul/templates/Raul/index.html
@@ -88,7 +88,7 @@
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'Raul-SecondHome' %}" class="dropdown-item">Second Homepage</a>
-                            <a href="#" class="dropdown-item">Blah</a>
+                            <a href="{% url 'cat-view' 'Plates' %}" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
                             <a href="#" class="dropdown-item">Blah</a>
