--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -101,6 +101,10 @@
                     <li><a href="{% url 'login' %}" class="nav-item nav-link">Login</a></li>
                     <li><a href="#" class="nav-item nav-link">Cart</a></li>
                     {% endif %}
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
 
                 </ul>
             </div>
