single prdouct page

--- a/Raul/templates/Raul/results.html
+++ b/Raul/templates/Raul/results.html
@@ -3,9 +3,13 @@
 
 <h1>Searched for {{query}}</h1>
 
-{{ products }}
+{% for prod in query  %}
+    {{ prod.price }}
 
-{{pro}}
+
+
+    {% endfor %}
+
 
 
 {% endblock %}}
